// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`download file: URLs > detects file type from buffer 1`] = `
Uint8Array [
  31,
  139,
  8,
  0,
  150,
  239,
  18,
  102,
  0,
  3,
  237,
  147,
  205,
  10,
  195,
  32,
  16,
  132,
  115,
  213,
  167,
  16,
  207,
  37,
  89,
  141,
  26,
  232,
  219,
  152,
  198,
  28,
  210,
  146,
  64,
  98,
  14,
  161,
  228,
  221,
  107,
  35,
  244,
  80,
  218,
  158,
  164,
  63,
  116,
  191,
  203,
  204,
  202,
  34,
  35,
  56,
  121,
  225,
  221,
  228,
  139,
  198,
  122,
  187,
  57,
  145,
  119,
  211,
  208,
  103,
  73,
  1,
  0,
  163,
  20,
  187,
  106,
  101,
  244,
  166,
  32,
  227,
  28,
  49,
  37,
  19,
  202,
  128,
  210,
  70,
  10,
  45,
  25,
  8,
  109,
  170,
  50,
  99,
  144,
  54,
  198,
  99,
  230,
  201,
  219,
  49,
  68,
  241,
  203,
  201,
  141,
  245,
  252,
  116,
  47,
  172,
  181,
  237,
  139,
  123,
  226,
  75,
  216,
  77,
  127,
  132,
  51,
  37,
  252,
  232,
  22,
  193,
  247,
  76,
  236,
  162,
  151,
  193,
  135,
  99,
  194,
  251,
  240,
  31,
  92,
  19,
  38,
  62,
  212,
  157,
  59,
  120,
  78,
  201,
  74,
  87,
  250,
  233,
  200,
  72,
  66,
  242,
  187,
  254,
  203,
  111,
  233,
  191,
  194,
  254,
  191,
  3,
  236,
  63,
  130,
  32,
  200,
  127,
  114,
  1,
  9,
  103,
  114,
  31,
  0,
  12,
  0,
  0,
]
`;

exports[`with local server > decompressTarball > decompresses 1`] = `
[
  {
    "attrs": {
      "gid": 24,
      "group": "staff",
      "mode": "000644",
      "mtime": 1712514154,
      "uid": 765,
      "user": "tylerbu",
    },
    "data": Uint8Array [
      123,
      10,
      9,
      34,
      107,
      101,
      121,
      49,
      34,
      58,
      32,
      49,
      44,
      10,
      9,
      34,
      107,
      101,
      121,
      50,
      34,
      58,
      32,
      123,
      10,
      9,
      9,
      34,
      110,
      101,
      115,
      116,
      101,
      100,
      34,
      58,
      32,
      34,
      111,
      98,
      106,
      101,
      99,
      116,
      34,
      10,
      9,
      125,
      10,
      125,
      10,
    ],
    "name": "./test/data/test1.json",
    "size": 51,
    "text": "{
	"key1": 1,
	"key2": {
		"nested": "object"
	}
}
",
    "type": "file",
  },
  {
    "attrs": {
      "gid": 24,
      "group": "staff",
      "mode": "000644",
      "mtime": 1712514154,
      "uid": 765,
      "user": "tylerbu",
    },
    "data": Uint8Array [
      123,
      10,
      9,
      34,
      107,
      101,
      121,
      49,
      34,
      58,
      32,
      49,
      44,
      10,
      9,
      34,
      107,
      101,
      121,
      50,
      34,
      58,
      32,
      123,
      10,
      9,
      9,
      34,
      110,
      101,
      115,
      116,
      101,
      100,
      34,
      58,
      32,
      34,
      111,
      98,
      106,
      101,
      99,
      116,
      34,
      10,
      9,
      125,
      10,
      125,
      10,
    ],
    "name": "./test/data/test2.json",
    "size": 51,
    "text": "{
	"key1": 1,
	"key2": {
		"nested": "object"
	}
}
",
    "type": "file",
  },
]
`;

exports[`with local server > download > JSON, downloadPath = directory 1`] = `
Uint8Array [
  123,
  10,
  9,
  34,
  107,
  101,
  121,
  49,
  34,
  58,
  32,
  49,
  44,
  10,
  9,
  34,
  107,
  101,
  121,
  50,
  34,
  58,
  32,
  123,
  10,
  9,
  9,
  34,
  110,
  101,
  115,
  116,
  101,
  100,
  34,
  58,
  32,
  34,
  111,
  98,
  106,
  101,
  99,
  116,
  34,
  10,
  9,
  125,
  10,
  125,
  10,
]
`;

exports[`with local server > download > JSON, downloadPath = directory 2`] = `
{
  "key1": 1,
  "key2": {
    "nested": "object",
  },
}
`;

exports[`with local server > download > JSON, downloadPath = file 1`] = `
Uint8Array [
  123,
  10,
  9,
  34,
  107,
  101,
  121,
  49,
  34,
  58,
  32,
  49,
  44,
  10,
  9,
  34,
  107,
  101,
  121,
  50,
  34,
  58,
  32,
  123,
  10,
  9,
  9,
  34,
  110,
  101,
  115,
  116,
  101,
  100,
  34,
  58,
  32,
  34,
  111,
  98,
  106,
  101,
  99,
  116,
  34,
  10,
  9,
  125,
  10,
  125,
  10,
]
`;

exports[`with local server > download > JSON, downloadPath = file 2`] = `
{
  "key1": 1,
  "key2": {
    "nested": "object",
  },
}
`;

exports[`with local server > download > JSON, no arguments 1`] = `
Uint8Array [
  123,
  10,
  9,
  34,
  107,
  101,
  121,
  49,
  34,
  58,
  32,
  49,
  44,
  10,
  9,
  34,
  107,
  101,
  121,
  50,
  34,
  58,
  32,
  123,
  10,
  9,
  9,
  34,
  110,
  101,
  115,
  116,
  101,
  100,
  34,
  58,
  32,
  34,
  111,
  98,
  106,
  101,
  99,
  116,
  34,
  10,
  9,
  125,
  10,
  125,
  10,
]
`;

exports[`with local server > download > compressed single JSON file, with extract 1`] = `
Uint8Array [
  31,
  139,
  8,
  8,
  106,
  161,
  14,
  104,
  0,
  3,
  116,
  101,
  115,
  116,
  48,
  46,
  106,
  115,
  111,
  110,
  0,
  171,
  230,
  226,
  84,
  202,
  78,
  173,
  52,
  84,
  178,
  82,
  48,
  212,
  129,
  176,
  141,
  128,
  236,
  106,
  46,
  78,
  78,
  165,
  188,
  212,
  226,
  146,
  212,
  20,
  32,
  79,
  41,
  63,
  41,
  43,
  53,
  185,
  68,
  137,
  139,
  179,
  150,
  171,
  150,
  11,
  0,
  15,
  251,
  251,
  209,
  51,
  0,
  0,
  0,
]
`;

exports[`with local server > download > compressed single JSON file, with extract 2`] = `
[
  "test5.json",
]
`;

exports[`with local server > download > compressed tarball, no extract (default) 1`] = `
Uint8Array [
  31,
  139,
  8,
  0,
  150,
  239,
  18,
  102,
  0,
  3,
  237,
  147,
  205,
  10,
  195,
  32,
  16,
  132,
  115,
  213,
  167,
  16,
  207,
  37,
  89,
  141,
  26,
  232,
  219,
  152,
  198,
  28,
  210,
  146,
  64,
  98,
  14,
  161,
  228,
  221,
  107,
  35,
  244,
  80,
  218,
  158,
  164,
  63,
  116,
  191,
  203,
  204,
  202,
  34,
  35,
  56,
  121,
  225,
  221,
  228,
  139,
  198,
  122,
  187,
  57,
  145,
  119,
  211,
  208,
  103,
  73,
  1,
  0,
  163,
  20,
  187,
  106,
  101,
  244,
  166,
  32,
  227,
  28,
  49,
  37,
  19,
  202,
  128,
  210,
  70,
  10,
  45,
  25,
  8,
  109,
  170,
  50,
  99,
  144,
  54,
  198,
  99,
  230,
  201,
  219,
  49,
  68,
  241,
  203,
  201,
  141,
  245,
  252,
  116,
  47,
  172,
  181,
  237,
  139,
  123,
  226,
  75,
  216,
  77,
  127,
  132,
  51,
  37,
  252,
  232,
  22,
  193,
  247,
  76,
  236,
  162,
  151,
  193,
  135,
  99,
  194,
  251,
  240,
  31,
  92,
  19,
  38,
  62,
  212,
  157,
  59,
  120,
  78,
  201,
  74,
  87,
  250,
  233,
  200,
  72,
  66,
  242,
  187,
  254,
  203,
  111,
  233,
  191,
  194,
  254,
  191,
  3,
  236,
  63,
  130,
  32,
  200,
  127,
  114,
  1,
  9,
  103,
  114,
  31,
  0,
  12,
  0,
  0,
]
`;

exports[`with local server > download > compressed tarball, with extract 1`] = `
Uint8Array [
  31,
  139,
  8,
  0,
  150,
  239,
  18,
  102,
  0,
  3,
  237,
  147,
  205,
  10,
  195,
  32,
  16,
  132,
  115,
  213,
  167,
  16,
  207,
  37,
  89,
  141,
  26,
  232,
  219,
  152,
  198,
  28,
  210,
  146,
  64,
  98,
  14,
  161,
  228,
  221,
  107,
  35,
  244,
  80,
  218,
  158,
  164,
  63,
  116,
  191,
  203,
  204,
  202,
  34,
  35,
  56,
  121,
  225,
  221,
  228,
  139,
  198,
  122,
  187,
  57,
  145,
  119,
  211,
  208,
  103,
  73,
  1,
  0,
  163,
  20,
  187,
  106,
  101,
  244,
  166,
  32,
  227,
  28,
  49,
  37,
  19,
  202,
  128,
  210,
  70,
  10,
  45,
  25,
  8,
  109,
  170,
  50,
  99,
  144,
  54,
  198,
  99,
  230,
  201,
  219,
  49,
  68,
  241,
  203,
  201,
  141,
  245,
  252,
  116,
  47,
  172,
  181,
  237,
  139,
  123,
  226,
  75,
  216,
  77,
  127,
  132,
  51,
  37,
  252,
  232,
  22,
  193,
  247,
  76,
  236,
  162,
  151,
  193,
  135,
  99,
  194,
  251,
  240,
  31,
  92,
  19,
  38,
  62,
  212,
  157,
  59,
  120,
  78,
  201,
  74,
  87,
  250,
  233,
  200,
  72,
  66,
  242,
  187,
  254,
  203,
  111,
  233,
  191,
  194,
  254,
  191,
  3,
  236,
  63,
  130,
  32,
  200,
  127,
  114,
  1,
  9,
  103,
  114,
  31,
  0,
  12,
  0,
  0,
]
`;

exports[`with local server > download > compressed tarball, with extract 2`] = `
[
  "test",
  "test/data",
  "test/data/test1.json",
  "test/data/test2.json",
]
`;

exports[`with local server > download > zip file > no extract (default) 1`] = `
Uint8Array [
  80,
  75,
  3,
  4,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  5,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  205,
  153,
  22,
  104,
  206,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  80,
  75,
  3,
  4,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  10,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  205,
  153,
  22,
  104,
  206,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  80,
  75,
  3,
  4,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  20,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  49,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  106,
  228,
  18,
  102,
  205,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  171,
  230,
  226,
  84,
  202,
  78,
  173,
  52,
  84,
  178,
  82,
  48,
  212,
  129,
  176,
  141,
  128,
  236,
  106,
  46,
  78,
  78,
  165,
  188,
  212,
  226,
  146,
  212,
  20,
  32,
  79,
  41,
  63,
  41,
  43,
  53,
  185,
  68,
  137,
  139,
  179,
  150,
  171,
  150,
  11,
  0,
  80,
  75,
  7,
  8,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  80,
  75,
  3,
  4,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  20,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  50,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  106,
  228,
  18,
  102,
  205,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  171,
  230,
  226,
  84,
  202,
  78,
  173,
  52,
  84,
  178,
  82,
  48,
  212,
  129,
  176,
  141,
  128,
  236,
  106,
  46,
  78,
  78,
  165,
  188,
  212,
  226,
  146,
  212,
  20,
  32,
  79,
  41,
  63,
  41,
  43,
  53,
  185,
  68,
  137,
  139,
  179,
  150,
  171,
  150,
  11,
  0,
  80,
  75,
  7,
  8,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  5,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  237,
  65,
  0,
  0,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  205,
  153,
  22,
  104,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  10,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  237,
  65,
  67,
  0,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  205,
  153,
  22,
  104,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  20,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  164,
  129,
  139,
  0,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  49,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  106,
  228,
  18,
  102,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  20,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  164,
  129,
  27,
  1,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  50,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  106,
  228,
  18,
  102,
  80,
  75,
  5,
  6,
  0,
  0,
  0,
  0,
  4,
  0,
  4,
  0,
  79,
  1,
  0,
  0,
  171,
  1,
  0,
  0,
  0,
  0,
]
`;

exports[`with local server > download > zip file > with extract 1`] = `
Uint8Array [
  80,
  75,
  3,
  4,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  5,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  205,
  153,
  22,
  104,
  206,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  80,
  75,
  3,
  4,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  10,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  205,
  153,
  22,
  104,
  206,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  80,
  75,
  3,
  4,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  20,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  49,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  106,
  228,
  18,
  102,
  205,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  171,
  230,
  226,
  84,
  202,
  78,
  173,
  52,
  84,
  178,
  82,
  48,
  212,
  129,
  176,
  141,
  128,
  236,
  106,
  46,
  78,
  78,
  165,
  188,
  212,
  226,
  146,
  212,
  20,
  32,
  79,
  41,
  63,
  41,
  43,
  53,
  185,
  68,
  137,
  139,
  179,
  150,
  171,
  150,
  11,
  0,
  80,
  75,
  7,
  8,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  80,
  75,
  3,
  4,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  20,
  0,
  32,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  50,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  13,
  0,
  7,
  106,
  228,
  18,
  102,
  205,
  153,
  22,
  104,
  205,
  153,
  22,
  104,
  171,
  230,
  226,
  84,
  202,
  78,
  173,
  52,
  84,
  178,
  82,
  48,
  212,
  129,
  176,
  141,
  128,
  236,
  106,
  46,
  78,
  78,
  165,
  188,
  212,
  226,
  146,
  212,
  20,
  32,
  79,
  41,
  63,
  41,
  43,
  53,
  185,
  68,
  137,
  139,
  179,
  150,
  171,
  150,
  11,
  0,
  80,
  75,
  7,
  8,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  5,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  237,
  65,
  0,
  0,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  205,
  153,
  22,
  104,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  0,
  0,
  0,
  0,
  56,
  124,
  163,
  90,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  10,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  237,
  65,
  67,
  0,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  205,
  153,
  22,
  104,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  20,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  164,
  129,
  139,
  0,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  49,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  106,
  228,
  18,
  102,
  80,
  75,
  1,
  2,
  20,
  3,
  20,
  0,
  8,
  0,
  8,
  0,
  209,
  90,
  135,
  88,
  15,
  251,
  251,
  209,
  46,
  0,
  0,
  0,
  51,
  0,
  0,
  0,
  20,
  0,
  24,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  164,
  129,
  27,
  1,
  0,
  0,
  116,
  101,
  115,
  116,
  47,
  100,
  97,
  116,
  97,
  47,
  116,
  101,
  115,
  116,
  50,
  46,
  106,
  115,
  111,
  110,
  117,
  120,
  11,
  0,
  1,
  4,
  245,
  1,
  0,
  0,
  4,
  20,
  0,
  0,
  0,
  85,
  84,
  5,
  0,
  1,
  106,
  228,
  18,
  102,
  80,
  75,
  5,
  6,
  0,
  0,
  0,
  0,
  4,
  0,
  4,
  0,
  79,
  1,
  0,
  0,
  171,
  1,
  0,
  0,
  0,
  0,
]
`;

exports[`with local server > download > zip file > with extract 2`] = `
[
  "test",
  "test/data",
  "test/data/test1.json",
  "test/data/test2.json",
]
`;

exports[`with local server > fetchFile > fetches file 1`] = `
Uint8Array [
  31,
  139,
  8,
  0,
  150,
  239,
  18,
  102,
  0,
  3,
  237,
  147,
  205,
  10,
  195,
  32,
  16,
  132,
  115,
  213,
  167,
  16,
  207,
  37,
  89,
  141,
  26,
  232,
  219,
  152,
  198,
  28,
  210,
  146,
  64,
  98,
  14,
  161,
  228,
  221,
  107,
  35,
  244,
  80,
  218,
  158,
  164,
  63,
  116,
  191,
  203,
  204,
  202,
  34,
  35,
  56,
  121,
  225,
  221,
  228,
  139,
  198,
  122,
  187,
  57,
  145,
  119,
  211,
  208,
  103,
  73,
  1,
  0,
  163,
  20,
  187,
  106,
  101,
  244,
  166,
  32,
  227,
  28,
  49,
  37,
  19,
  202,
  128,
  210,
  70,
  10,
  45,
  25,
  8,
  109,
  170,
  50,
  99,
  144,
  54,
  198,
  99,
  230,
  201,
  219,
  49,
  68,
  241,
  203,
  201,
  141,
  245,
  252,
  116,
  47,
  172,
  181,
  237,
  139,
  123,
  226,
  75,
  216,
  77,
  127,
  132,
  51,
  37,
  252,
  232,
  22,
  193,
  247,
  76,
  236,
  162,
  151,
  193,
  135,
  99,
  194,
  251,
  240,
  31,
  92,
  19,
  38,
  62,
  212,
  157,
  59,
  120,
  78,
  201,
  74,
  87,
  250,
  233,
  200,
  72,
  66,
  242,
  187,
  254,
  203,
  111,
  233,
  191,
  194,
  254,
  191,
  3,
  236,
  63,
  130,
  32,
  200,
  127,
  114,
  1,
  9,
  103,
  114,
  31,
  0,
  12,
  0,
  0,
]
`;

exports[`with mock service worker > JSON, downloadPath = file, with Content-Disposition 1`] = `
Uint8Array [
  123,
  10,
  9,
  34,
  107,
  101,
  121,
  49,
  34,
  58,
  32,
  49,
  44,
  10,
  9,
  34,
  107,
  101,
  121,
  50,
  34,
  58,
  32,
  123,
  10,
  9,
  9,
  34,
  110,
  101,
  115,
  116,
  101,
  100,
  34,
  58,
  32,
  34,
  111,
  98,
  106,
  101,
  99,
  116,
  34,
  10,
  9,
  125,
  10,
  125,
  10,
]
`;

exports[`with mock service worker > JSON, downloadPath = file, with Content-Disposition 2`] = `
{
  "key1": 1,
  "key2": {
    "nested": "object",
  },
}
`;
